Fix minor typos

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,7 +54,7 @@
                                 </div>
                             </div> 
                             <a href="/what-is-ccs/">CCS Rules</a> 
-                            <a href="https://firo.org" target="_blank">Firo.org/a> 
+                            <a href="https://firo.org" target="_blank">Firo.org</a> 
                             <!--a href="/donate/" class="donate-btn">Donate</a-->
                           </div>
                       </div>
