--- a/_layouts/fr.html
+++ b/_layouts/fr.html
@@ -7,7 +7,7 @@ layout: base
 <div class="container ffs-breadcrumbs">
    <div class="row">
       <div class="col-xs-12">
-          <p><a href="/">Zcoin Crowdfunding System</a></p>
+          <p><a href="/">Firo Community Crowdfunding System</a></p>
           <p><a href="/funding-required/">Funding Required</a></p>
         <p class="bread-active">{{page.title}}</p>
       </div>
